# memetropolis-contract

./: .gitmodules
evm/: .env.example  .gitignore  Makefile  foundry.toml  package.json  pnpm-lock.yaml  remappings.txt
evm-launchpad/: .env.example  README.md  remappings.txt
evm-launchpad/script/: IDOLaunchpad.s.sol
evm-launchpad/src/: IDOLaunchpad.sol
evm-launchpad/test/: IDOLaunchpad.t.sol
evm/script/: DeployTokenFactory.s.sol
evm/script/arbitrum/: DeployTokenFactory.s.sol
evm/script/base/: DeployTokenFactory.s.sol
evm/script/bnb/: DeployTokenFactory.s.sol
evm/script/eth/: DeployTokenFactory.s.sol
evm/src/: Token.sol  TokenFactory.sol
evm/src/mock/: SimpleToken.sol
evm/test/: TokenFactory.t.sol
oft/: README.md  chain.json  hardhat.config.ts  package.json
oft-solana/create-oft-token/: .env_example  package.json  tsconfig.json
oft-solana/create-oft-token/src/: index.ts
oft/contracts/: MyOFT.sol
oft/ignition/: sepolia_params.json
oft/ignition/modules/: MyOFT.ts
oft/test/: EndpointV2Mock.json  MyOFT.ts
solana-launchpad/: Anchor.toml  README.md  package.json
solana-launchpad/programs/ido-launchpad/: Cargo.toml
solana-launchpad/programs/ido-launchpad/src/: lib.rs
solana-launchpad/programs/ido-launchpad/src/utils/: mod.rs  token.rs
solana-launchpad/tests/: buy.test.ts  claim.test.ts  initialize.test.ts  withdraw_meme.test.ts  withdraw_payment.test.ts
solana-pumpfun/: Anchor.toml  Readme.md  package.json
solana-pumpfun/tests/: buy.test.ts  createConfig.test.ts  createToken.test.ts  sell.test.ts
(+40 files in other folders)
